--- a/src/presence_analyzer/static/presence_start_end.html
+++ b/src/presence_analyzer/static/presence_start_end.html
@@ -79,6 +79,11 @@
         google.load("visualization", "1", {packages:["corechart", "timeline"], 'language': 'pl'});
     </script>
     <script type="text/javascript">
+        function parseInterval(value) {
+            var result = new Date(1,1,1);
+            result.setMilliseconds(value*1000);
+            return result;
+        }
         (function($) {
             $(document).ready(function(){
                 var loading = $('#loading');
@@ -98,30 +103,41 @@
                         chart_div.hide();
                         
                         // some dummy data, this should go from API
-                        var result = [
+                        /*var result = [
                             ["Mon", new Date(1, 1, 1, 7, 37, 38), new Date(1, 1, 1, 15, 07, 14)],
                             ["Tue", new Date(1, 1, 1, 8, 16, 23), new Date(1, 1, 1, 14, 01, 47)],
                             ["Wed", new Date(1, 1, 1, 7, 00, 06), new Date(1, 1, 1, 13, 24, 12)],
                             ["Thu", new Date(1, 1, 1, 7, 26, 32), new Date(1, 1, 1, 12, 40, 45)],
                             ["Fri", new Date(1, 1, 1, 6, 53, 22), new Date(1, 1, 1, 12, 52, 09)]
-                        ] 
+                        ]*/
+                        $.getJSON("/api/v1/presence_start_end/"+selected_user, function(result) {
+                            console.log(result);
+                            $.each(result, function(index, value) {
+                                console.log("index = ", index);
+                                console.log("value = ", value);
+                                console.log("value_parse = ", parseInterval(value[1]));
+                                index[1] = parseInterval(index[1]);
+                                value[1] = parseInterval(value[1]);
+                                value[2] = parseInterval(value[2]);
+                            });
+                            
+                            var data = new google.visualization.DataTable();
+                            data.addColumn('string', 'Weekday');
+                            data.addColumn({ type: 'datetime', id: 'Start' });
+                            data.addColumn({ type: 'datetime', id: 'End' });
+                            data.addRows(result);
+                            var options = {
+                                hAxis: {title: 'Weekday'}
+                            };
+                            var formatter = new google.visualization.DateFormat({pattern: 'HH:mm:ss'});
+                            formatter.format(data, 1);
+                            formatter.format(data, 2);
 
-                        var data = new google.visualization.DataTable();
-                        data.addColumn('string', 'Weekday');
-                        data.addColumn({ type: 'datetime', id: 'Start' });
-                        data.addColumn({ type: 'datetime', id: 'End' });
-                        data.addRows(result);
-                        var options = {
-                            hAxis: {title: 'Weekday'}
-                        };
-                        var formatter = new google.visualization.DateFormat({pattern: 'HH:mm:ss'});
-                        formatter.format(data, 1);
-                        formatter.format(data, 2);
-
-                        chart_div.show();
-                        loading.hide();
-                        var chart = new google.visualization.Timeline(chart_div[0]);
-                        chart.draw(data, options);
+                            chart_div.show();
+                            loading.hide();
+                            var chart = new google.visualization.Timeline(chart_div[0]);
+                            chart.draw(data, options);
+                        });
 
                     }
                 });
